--- a/document_final.tex
+++ b/document_final.tex
@@ -46,6 +46,24 @@ Nous allons travailler ici sur l'article \cite{ref2} d'A. Gaudillière et A. Asse
 \tableofcontents
 \newpage
 
+\section{Historique}
+Le modèle qui nous intéresse est un exemple de modèle de croissance aléatoire couramment nommé IDLA (Internal Diffusion Limited Aggregation). Il a été introduit en 1986 par P. Meakin et J.M. Deutch \cite{chimie} dans le cadre de la chimie théorique pour décrire des processus comme l'électro-polissage. Dès l'introduction du modèle, il a semblé important de connaître la forme asymptotique du cluster obtenu, mais aussi l'ordre des variation par rapport à cette forme limite puisqu'il s'agissait de polir des matériaux.
+
+P. Diaconis et W. Fulton ont formalisé mathématiquement le processus en 1991 \cite{ref4} et démontré certaines de ces propriétés, en particulier une propriété très utile de commutativité présentée ici partie \ref{abel}. Le modèle de croissance qu'ils proposent est alors original car il s'agit du premier modèle qui semble donner des clusters de forme sphérique.
+
+G. Lawler, M. Bramson, M. et D. Griffeath ont pour la première fois montré en 1992 dans \cite{ref5} que la forme asymptotique de la région explorée était une boule, dans le sens suivant :
+on appelle $\mathbb{B}(y,R)=\{x \in \mathbb{Z}^d, \|x-y\| <R\}$ la boule dans $\mathbb{Z}^d$ de centre $y$ et de rayon $R$, et $b(n)=\mathrm{Card}(\mathbb{B}(0,n))$. On note $A(k)$ la région explorée après avoir lancé $k$ explorateurs. Alors :
+\begin{The}[Lawler, Bramson, Griffeath]
+ Pour tout $\epsilon > 0$, presque sûrement,
+ \begin{equation*}
+  \mathbb{B}(0,n(1-\epsilon )) \subset A(b(n)) \subset \mathbb{B}(0,n(1-\epsilon ))
+ \end{equation*}
+ pour tous $n$ assez grand.
+\end{The}
+
+Puis, le problème de l'ordre des fluctuations autour de la boule a été étudié par G. Lawler qui montre en 1995 \cite{ref6} que les fluctuations sont presque sûrment majorées par $n^{1/3} \log ^4 (n)$ en dimension $2$ ou plus. Toutefois, des simulations suggèrent que l'ordre des fluctuations est plutôt logarithmique. Aucune amélioration notable de ces résultats n'est publiée, jusqu'en 2010, lorsque A. Asselah et A. Gaudillière montrent dans \cite{ref} que l'erreur est presque sûrement inférieure à $\alpha\sqrt{\log(n)}$ en dimension 3 et $\alpha \log(n)$ en dimension 2. Ils publient un second article \cite{ref2} auquel nous nous intéressons ici, qui établit l'optimalité de ce résultat, du moins pour ce qui est de l'erreur interne.
+
+\newpage
 \section{Premières Propriétés}
 On appelle $\mathbb{B}(y,R)=\{x \in \mathbb{Z}^d, \|x-y\| <R\}$ la boule dans $\mathbb{Z}^d$ de centre $y$ et de rayon $R$. Le bord de cette boule est alors :
 \begin{equation}
@@ -56,13 +74,14 @@ Commençons par définir ce qu'est la région explorée par N explorateurs :
 \begin{Def}
  On appelle explorateur une marche aléatoire symétrique de $\mathbb{Z}^d$ partant d'un point $z$. Tous les explorateurs seront pris indépendants.
  Soit $\Lambda$ la région de $\mathbb{Z}^d$ préalablement explorée et $\xi^n=(\xi_1,\dots,\xi_n)$ les positions de départs des explorateurs qui suivent des marches aléatoires indépendantes $(S_1,\dots,S_n)$ symétriques sur $\mathbb{Z}^d$. 
- On définit alors récursivement $A(\Lambda,\xi^n)$ la région explorée par les explorateurs de la manière suivante:
- 
- -$A(\Lambda,\emptyset)=\Lambda$
- 
- -$A(\Lambda,\xi^k)=A(\Lambda,\xi^{k-1})\cup\{S_k(\tau_k)\}$ 
+ On définit alors récursivement $A(\Lambda,\xi^n)$ la région explorée par les explorateurs de la manière suivante :
+\begin{itemize}
+ \item $A(\Lambda,\emptyset)=\Lambda$
+ \item $A(\Lambda,\xi^k)=A(\Lambda,\xi^{k-1})\cup\{S_k(\tau_k)\}$ 
  où $\tau_k$=$\inf \{t\geqslant0 | S_k(t)\notin A(\Lambda,\xi^{k-1})\}$ est le premier temps pour lequel $S_k$ sort de la région explorée. On dit que l'explorateur s'installe à l'instant $\tau_k$.
- \newline On notera par la suite $A(\xi^n)=A(\emptyset,\xi^n)$ et $A_R(\xi^n)=A(\xi^n)\cap\mathbb{B}(0,R)$. On notera aussi plus simplement $A(n)=A( (0,\dots,0) )$ où le vecteur est de taille $n$.
+\end{itemize}
+
+ On notera par la suite $A(\xi^n)=A(\emptyset,\xi^n)$ et $A_R(\xi^n)=A(\xi^n)\cap\mathbb{B}(0,R)$. On notera aussi plus simplement $A(n)=A( (0,\dots,0) )$ où le vecteur est de taille $n$.
  \end{Def}
  
  On va désormais essayer d'estimer la forme asymptotique de cette région explorée pour des explorateurs partant de l'origine, et notamment la différence entre celle-ci et une boule correspondante, c'est à dire la boule de volume le nombre d'explorateurs lancés. On va définir pour cela les notions d'erreur interne et externe.
@@ -115,13 +134,13 @@ L'erreur interne, notée $\delta_I$, est la différence entre le rayon du cercle l
  On peut naturellement s'interroger sur l'optimalité de cet ordre de fluctuations en $\sqrt{\log(n)}$ pour $d\geqslant3$, $\log(n)$ pour $d=2$. On va prouver ici deux théorèmes pour étudier cette question.
  \begin{The}
  \label{ext}
-  En dimension d$\geqslant3$, $\exists\alpha_d$>0 tel que
+  En dimension $d \geqslant 3$, $\exists\alpha_d$>0 tel que
   \begin{equation}
    \lim_{n\to\infty}P(\exists k\geqslant n,\ \delta_0(k)\geqslant h(k)\ \normalfont{|}\ \delta_I(n)<h(n))=1
   \end{equation}
   où $h(n)=\alpha_d\sqrt{\log(n)}$.
   
-  En dimension d=2, $\exists\alpha_2$>0 tel que
+  En dimension $d=2$, $\exists\alpha_2 > 0$ tel que
   \begin{equation}
    \lim_{n\to\infty}P(\exists k\geqslant n,\ \delta_0(k)\geqslant h(k)\ \normalfont{|}\ \delta_I(n)<h(n))=1
   \end{equation}
@@ -152,7 +171,7 @@ Introduisons dès à présent quelques définitions qui nous seront utiles par la su
  
   \item $W_R(\Lambda;\eta, z)$ est le nombre d'explorateurs, partant de la configuration $\eta$ et de la région explorée $\Lambda$, qui passent par $z\in\partial\mathbb{B}(0,R)$ au moment où ils sortent de $\mathbb{B}(0,R)$.
   
-  \item $\zeta_z^N$ est le vecteur $(z,\dots,z)$ de taille N.
+  \item $\zeta_z^N$ est le vecteur $(z,\dots,z)$ de taille $N$.
 \end{enumerate}
  \end{Def}
  \begin{Rq}
@@ -256,9 +275,7 @@ On remarque que la seule différence entre $\mathrm{cov}(z)$ et $\mathrm{cov_2}(z
 \begin{equation*}
  W_{n-L(n)}(A(\zeta_0^{b(n)});X_n1_0,z)=M_{n-L(n)}(X_n1_0,z)
 \end{equation*}
-et donc $N'_z=N_z$ et $\mathrm{cov_2}(z) \subset \mathrm{cov}(z)$. 
-
-Soit $U$ la variable aléatoire à valeur dans $\Sigma$ calculée en regardant en quel point une marche aléatoire symétrique atteint $\Sigma$. On alors :
+et donc $N'_z=N_z$ et $\mathrm{cov_2}(z) \subset \mathrm{cov}(z)$. Soit $U$ la variable aléatoire à valeur dans $\Sigma$ calculée en regardant en quel point une marche aléatoire symétrique atteint $\Sigma$. On alors :
 \begin{equation*}
  N'_z=\sum_{p\leqslant X_n}{1_{U_p=z}}
 \end{equation*}
@@ -373,14 +390,20 @@ Et donc,
 \end{proof}
 
 \end{Cor}
-Autrement dit, pour une infinité de termes, l'erreur interne ou l'erreur externe est d'ordre $\sqrt{\log n}$, donc le théorème \ref{limsup} est d'une certaine façon optimal. On verra dans la partie \ref{interne} que \ref{io} est en fait vraie pour l'erreur interne seule, mais on ne sait pas si elle est vraie pour l'erreur externe seule.
+Autrement dit, pour une infinité de termes, l'erreur interne ou l'erreur externe est d'ordre $\sqrt{\log n}$, donc le théorème \ref{limsup} est d'une certaine façon optimal. On verra dans la partie \ref{interne} que \ref{io} est en fait vraie pour l'erreur interne seule.
 
 \subsection{En dimension 2}
 
 
 \section{L'erreur interne}
 \label{interne}
-Pour $z \in \mathbb{Z}^d \setminus \{ 0 \}$ on note $\Sigma (z) = \partial \mathbb{B} (0, \| z \| )$. Remarquons que $z \in \Sigma (z)$. Pour $\Lambda \subset \Sigma (z)$ et $n$ un entier et $R > 0$, on définit aussi la variable aléatoire $N_z (n, \Lambda, R)$ comme le nombre de marches aléatoires parmi $n$ marches partant de $0$ qui atteignent $\Sigma (z)$ en $\Lambda$ puis visitent $z$ avant de sortir de $\mathbb{B} (0, \| z \| + R)$.
+
+
+Pour $z \in \mathbb{Z}^d \setminus \{ 0 \}$ on note $\Sigma (z) = \partial \mathbb{B} (0, \| z \| )$. Remarquons que $z \in \Sigma (z)$. Pour $\Lambda \subset \Sigma (z)$ et $n$ un entier et $R > 0$, on définit aussi la variable aléatoire $N_z (n, \Lambda, R)$ comme le nombre de marches aléatoires parmi $n$ marches partant de $0$ qui atteignent $\Sigma (z)$ en $\Lambda$ puis visitent $z$ avant de sortir de $\mathbb{B} (0, \| z \| + R)$ :
+\begin{equation}
+ N_z (n, \Lambda, R) = \mathrm{Card} \{ i \leqslant n \ \mid \ S_i (H(\Sigma (z))) \in \Lambda, \ H(z) < H( \mathbb{B}^c (O, \| z \| + h )) \}
+\end{equation}
+
 \begin{Lemme}
  Soit $X$ une variable de Poisson de paramètre $\lambda$. Il existe $\kappa > 0$ tel que pour tout $z \in \mathbb{Z}^d \setminus \{ 0 \}$ et $R > 0$, 
  \begin{equation*}
@@ -388,6 +411,36 @@ Pour $z \in \mathbb{Z}^d \setminus \{ 0 \}$ on note $\Sigma (z) = \partial \math
  \end{equation*}
  où $\Lambda = \mathbb{B} (z, R) \cap \Sigma (z)$ et $\Lambda ' = \Sigma (z) \setminus \Lambda$.
 \end{Lemme}
+\begin{proof}
+ D'après la proposition \ref{indé}, $N_z (X, \Lambda, \infty )$ et $N_z (X, \Lambda ', R)$ sont des variables de Poisson indépendantes. Ainsi :
+\begin{equation*} P(N_z (X, \Lambda, \infty ) = 0, N_z (X, \Lambda ', R) = 0) = \exp \left( - E[N_z (X, \Lambda, \infty )] - E[N_z (X, \Lambda ', R)] \right)
+\end{equation*}
+
+On va montrer que chacune de ces espérances est majorée par un terme du type $c \frac{\lambda R}{\| z \| ^{d-1} }$.
+\begin{itemize}
+ \item Pour la première, on se sert du fait que $P_0 (S(H(\Sigma (z))) = y) \leqslant \frac{c_1} {\| z \| ^ {d-1}} $ (Lemme 1.7.4 de \cite{ref3}) et $P_y (H(z) < \infty ) \leqslant \frac{c_2}{1+\| y-z \| ^{d-2}}$ (Théorème 1.5.4 de \cite{ref3}) pour écrire :
+ \begin{eqnarray}
+ E[N_z (X, \Lambda, \infty )] & = & \lambda \ P_0 (S(H(\Sigma (z))) \in \Lambda, \ H(z) < \infty)
+ \nonumber\\& = & \lambda \sum _{y \in \Lambda} P_0 (S(H(\Sigma (z))) = y) \ P_y (H(z) < \infty )
+ \nonumber\\& \leqslant & \lambda \sum _{y \in \Lambda} \frac{c_1} {\| z \| ^ {d-1}} \ \frac{c_2}{1+\| y-z \| ^{d-2}}
+ \end{eqnarray}
+ En arrangeant plutôt la somme selon $k = \lfloor \| y-z \| \rfloor$, et en observant que pour un $k$ fixé on a moins de $c_3 k^{d-2}$ positions de $y$ correspondants, on obtient :
+ \begin{eqnarray}
+ E[N_z (X, \Lambda, \infty )] & \leqslant & c_4 \frac{\lambda} {\| z \| ^ {d-1}} \left( 1 + \sum _{k=1} ^{R} \frac{k^{d-2}}{1+k^{d-2}} \right)
+ \nonumber\\& \leqslant & c_5 \frac{\lambda R} {\| z \| ^ {d-1}}
+ \end{eqnarray}
+ 
+ \item Pour la seconde espérance, on utilise le résultat du Lemme 5(b) de \cite{ref7} qui assure que $P_y ( H(z) < H( \mathbb{B}^c (O, \| z \| + h )) ) \leqslant \frac{c_6 R^2}{\| z-y \| ^d}$, et on utilise la même transformation sur la somme :
+ \begin{eqnarray}
+ E[N_z (X, \Lambda ', R)] & = & \lambda \ P_0 (S(H(\Sigma (z))) \in \Lambda ', \ H(z) < H( \mathbb{B}^c (O, \| z \| + h )) )
+ \nonumber\\& = & \lambda \sum _{y \in \Lambda '} P_0 (S(H(\Sigma (z))) = y) \ P_y (H(z) < H( \mathbb{B}^c (O, \| z \| + h )) )
+ \nonumber\\& \leqslant & \lambda \sum _{y \in \Lambda '} \frac{c_1} {\| z \| ^ {d-1}} \ \frac{c_6 R^2}{\| z-y \| ^d}
+ \nonumber\\& \leqslant & c_7 \frac{\lambda R^2} {\| z \| ^ {d-1}} \sum _{k=R} ^{2\|z\|+2} \frac{k^{d-2}}{k^{d}}
+ \nonumber\\& \leqslant & c_8 \frac{\lambda R} {\| z \| ^ {d-1}}
+ \end{eqnarray}
+\end{itemize}
+\end{proof}
+
 
 
  
