--- a/document_final.bib
+++ b/document_final.bib
@@ -1,18 +1,72 @@
 @article{ref,
-author={Asselah, Amine and Gaudillière, Alexandre},
+author={Asselah, Amine and Gaudilli\`ere, Alexandre},
 title={{Sub-logarithmic fluctuations for internal DLA}},
+journal = {Arxiv preprint},
+url={http://arxiv.org/abs/1011.4592},
 year={2010},
 }
 
 @article{ref2,
-author={Asselah, Amine and Gaudillière, Alexandre},
+author={Asselah, Amine and Gaudilli\`ere, Alexandre},
 title={{Lower bounds on fluctuations for internal DLA}},
+journal = {Arxiv preprint},
+url={http://arxiv.org/abs/1111.4233},
 year={2010},
 }
 
 @book{ref3,
-author={Gregory, Lawler},
+author={Lawler, Gregory},
 title={{Intersection of Random Walks}},
-publisher={Birkhäuser Boston},
+publisher={Birkh\"auser Boston},
 year={1991},
 }
+
+@article{chimie,
+author={Meakin, Paul and Deutch, John M.},
+title={The formation of surfaces by diffusion limited annihilation},
+journal={J.Chem.Phys.},
+volume={85},
+number={4},
+year={1986},
+pages={2320-2325},
+}
+
+@article{ref4,
+author={Diaconis, Persi and Fulton, William},
+title={A growth model, a game, an algebra, Lagrange inversion, and characteristic classes.},
+journal={Rend. Sem. Mat. Univ. Politec. Torino},
+volume={49},
+number={1},
+pages={95-119},
+year={1991},
+}
+
+@article{ref5,
+author={Lawler, Gregory and Bramson, Maury and Griffeath, David},
+title={Internal diffusion limited aggregation},
+journal={Ann. Probab.},
+volume={20},
+year={1992},
+number={4},
+pages={2117-2140},
+}
+
+@article{ref6,
+author={Lawler, Gregory},
+title={Subdiffusive fluctuations for internal diffusion limited aggregation},
+journal={Ann. Probab.},
+volume={23},
+year={1995},
+number={1},
+pages={71-86},
+}
+
+@article{ref7,
+title = {Internal DLA in Higher Dimensions},
+author={Jerison, David and Levine, Lionel and Sheffield, Scott},
+journal={Arxiv preprint},
+year={2012},
+url={http://de.arxiv.org/abs/1012.3453},
+}
+
+
